# legalAI

./: pyproject.toml  rag_system.py
cache/: embeddings_20250211_192821.npy  metadata_20250211_192821.json
data/: code (1).txt  code (10).txt  code (11).txt  code (12).txt  code (13).txt  code (14).txt  code (15).txt  code (16).txt  code (17).txt  code (18).txt  code (2).txt  code (3).txt  code (4).txt  code (5).txt  code (6).txt  code (7).txt  code (8).txt  code (9).txt  code.txt
legalai/: __init__.py
